modules/cli/src/test/resources/bad/disamb/modules/Modules04b.scr
module bad.disamb.modules.Modules04b;

import bad.disamb.modules.Modules04b as Modules04b;  // Simple name coincides with full name 

